            > APCORR_FILE added, so that you can use custom values
            > Many catches for non existant values
            > Removing FIT_AP_R
            > Removing assumption of AREA and DQ flags
        PSF
            > started on generalising that too
            > Gnenerated PSFs are now PrimaryHDUs
            > DPOS_THRESH now supports pixel or arcsec units
        MATCHING:
            > Fixes to generic_match so that it as able to nan fill tables better
        PARAMS:
            > Added APCORR_FILE, FILTER and FWHM

    MATCH:
        > Default match changed from cascade to generic
    
    
    

            



v0.4.9:
    Bug fixes:
        >   webbpsf update has caused problems with F150W2 generation
            --> Ive just added a try catch on it for now
	Photometry:
		>	Updated CRDS MIRI apcorr download
		>	Switched APCORR calculation to interpolation rather than curve fitting
v0.4.8:
	Bug fixes:
		>	generic match has a filled(np.nan) bodge applied
v0.4.7:
	Bug fixes:
		>	bandmatch and calc-instr-zp had had bugs introduced with small changes to generic_match earlier

v0.4.2:
    Matching:
        >   Adding SN_THRESH to band matching
        >   Formally adding BRIDGE_COL to band matching
        >   Band match now exports -nircam -miri catalogues mid way through the matching
    General:
        >   Added "import_table()" but not implemented throughout

v0.4.1:
	Adding NIRCam to MIRI matching
v0.4.0:
	Matching:
		>	Starting work on the miri matching properly
		>	right now there is a hard coded increasing matching threshold wrt fwhm
			>>> nircam short 0.06
			>>>	nircam long  0.1
			>>> <=F560W		 0.15
			>>>	<=F1000W	 0.2
			>>>	<=F2100W	 0.5
v0.3.15:
	Match
		>	Genericmatch column names now drop the suffix if possible
v0.3.14:
	Param:
		>	Added NEXP_THRESH
        >   Beginning to remove RM_MATCH
    MATCH:
        >   Allowing NEXP_THRESH to be used during the normal matching
        >   Bandmatch just does magnitudes now
    General: