@@ -30,6 +30,11 @@ NULL=0
 LONG=1
 SHORT=2
 
+PIX=0
+ARCSEC=1
+ARCMIN=2
+DEG=3
+
 ## SOURCE FLAGS
 SRC_GOOD=0
 SRC_BAD=0x01
